--- a/q/274209.html
+++ b/q/274209.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>067</td><td>Java</td><td>240719T190530Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274266#274266">swpalmer</a></td></tr>
+<tr d-ix="0"><td>064</td><td>Java</td><td>240719T190530Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274266#274266">swpalmer</a></td></tr>
 <tr d-ix="1"><td>036</td><td>Raku Perl 6 rakudo</td><td>240719T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274258#274258">bb94</a></td></tr>
 <tr d-ix="2"><td>068</td><td>Go</td><td>240718T005925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274224#274224">bigyihsu</a></td></tr>
 <tr d-ix="3"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
@@ -46,8 +46,8 @@
 <tr d-ix="17"><td>011</td><td>Charcoal</td><td>240717T213655Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274223#274223">Neil</a></td></tr>
 <tr d-ix="18"><td>036</td><td>APL+WIN</td><td>240717T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274220#274220">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2><a href="https://ato.pxeger.com/run?1=VU-xbsIwEN35ihNSpEQykZ0QHAjJ0KFSh6oDSyXEYKhD3QYnsh0KCvmSLgztR_E3dSCt1OF07_TevXv3-fXG9ux8KTYF0xoemZDQDACqel2IDWjDjG37UrzAznLuwight8sVMLXV3lUK0Fn4tRGFn9dyY0Qp_fsezB-k4Vuu0F1ZFpzJDHJIv2uTj-LL82GUNR-vouDuIQuJ14jcPTgkiNOUBPR0uuJ5GHjNWnH2nrSHLEtp0qnSFHuKm1pJMKrmSdsPxBJJ2_ur5JouLxW4e6a6yDD7FxxgcdSG7_yyNn5lPzO5O3T0DBztyCHqtAhyn1VVcXT7T_yKKc3t4FrW87zbkXbQ1e_lpyVGU0QwIiEKKAoDFE1RTBEJJra6HqMQYxQEmKCIWp6EY0oI7lYiiickpOM_FK3ON98f" rel="nofollow noreferrer">Java</a>, 67 bytes</h2>
-<pre class="lang-java prettyprint-override"><code>x-&gt;{if(x==0)x=1;while(!(x%128==127||x%128&lt;32)){x&gt;&gt;=7;}return x==0;}
+<div id="pu0" class="pu"><h2><a href="https://ato.pxeger.com/run?1=VU9BbsIwELzzii1SkCOZyHYIDqSJqh4q9VD1wBFxcGlMXQUnsh0ahPKSXji0j-I3TYBW6mG1s5rdmdnPr3exE8dTsS6EtfAklIbDAKCqXwq1BuuE69quVK-w7Ti0cEbpzXIFwmysf14F6CWC2qkikLVeO1Xq4OEKbh-1yze5wfdlWeRCZyAh_a6dHMenu2acHZRETZoSv0lp8vGmihw1HmXxTUoZH43OOAupf2iyLOVJa3JXGw39SdJedUxyTiFLA2gnTB8N5v8CAiz21uXboKxdUHUfOImGnp2DZz09xP0uBhmIqir26Jo4qISxeTegjvV9_2LSDvr6dX5eEjzDlGAaYsZxyHA0wzHHlE276nuMQ0IwY4TiiHc8DSecUtKfRJxMacgnfyhaHS-6Pw" rel="nofollow noreferrer">Java</a>, 64 bytes</h2>
+<pre class="lang-java prettyprint-override"><code>x-&gt;{if(x==0)x=1;while(x%128!=127&amp;&amp;x%128&gt;31){x&gt;&gt;=7;}return x==0;}
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>41</s> 36 bytes</h1>
