--- a/q/274270.html
+++ b/q/274270.html
@@ -26,9 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>002</td><td>NARS2000</td><td>240719T213649Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274271#274271">RubenVer</a></td></tr>
+<tr d-ix="0"><td>040</td><td>Google Sheets</td><td>240719T220307Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274272#274272">doubleun</a></td></tr>
+<tr d-ix="1"><td>002</td><td>NARS2000</td><td>240719T213649Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274271#274271">RubenVer</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>NARS2000, 2 bytes</h1>
+<div id="pu0" class="pu"><h1>Google Sheets, 40 bytes</h1>
+<pre><code>=join(&quot;,&quot;,sort(A:A))=join(&quot;,&quot;,sort(B:B))
+</code></pre>
+<p>Put the first list in column <code>A1:A</code>, the second list in <code>B1:B</code>, and the formula in cell <code>C1</code>.</p>
+<p><img src="https://i.sstatic.net/TKdF6qJj.png" alt="screenshot" /></p>
+</div>
+<div id="pu1" class="pu"><h1>NARS2000, 2 bytes</h1>
 <pre><code>≡⍦
 </code></pre>
 <p>Multiset match: are the two arguments equivalent when treated as multisets? This checks that the elements are both the same and have the same multiplicity.</p>
