--- a/q/274270.html
+++ b/q/274270.html
@@ -26,24 +26,31 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>027</td><td>JavaScript ES6</td><td>240719T220621Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274273#274273">Arnauld</a></td></tr>
-<tr d-ix="1"><td>040</td><td>Google Sheets</td><td>240719T220307Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274272#274272">doubleun</a></td></tr>
-<tr d-ix="2"><td>002</td><td>NARS2000</td><td>240719T213649Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274271#274271">RubenVer</a></td></tr>
+<tr d-ix="0"><td>039</td><td>JavaScript Node.js</td><td>240719T221009Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274274#274274">Andrew B</a></td></tr>
+<tr d-ix="1"><td>027</td><td>JavaScript ES6</td><td>240719T220621Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274273#274273">Arnauld</a></td></tr>
+<tr d-ix="2"><td>040</td><td>Google Sheets</td><td>240719T220307Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274272#274272">doubleun</a></td></tr>
+<tr d-ix="3"><td>002</td><td>NARS2000</td><td>240719T213649Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274271#274271">RubenVer</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 27 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 39 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>(a,b,x=k=&gt;k.sort().join`|`)=&gt;x(a)==x(b)
+</code></pre>
+<p><a href="https://tio.run/##hY47DoMwEET7nMLlrrQ24aNQmTInSIeQMMREfIQRJhFF7u4YqogU6Uaj90bTqZey9dxOCx/NXbtGOlBU0Sp7mfXCmnkBFJ1px/JdosxWUCjlChW62ozWDFoM5gEN5GcKKaKYkoLyiBKffFMgsiBgnGfsNj/16eBsXELpbqQ@Xb74qxrsjxB69N/ofmPjovg45z4" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 27 bytes</h1>
 <p>Expects <code>(a)(b)</code> and returns a Boolean value.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;b=&gt;a.sort()+&quot;&quot;==b.sort()
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@z/R1i7J1i5Rrzi/qERDU1tJydY2Ccr5n5yfV5yfk6qXk5@ukaYRrWCgY6hjpGOsY6IQqwnkGumYADlAQSBXU0FfXyGkqDSVC10TSJWJjjlMizmQYwbWAAJATW6JOcWYugwh6g3hKpEB1Kr/AA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>Google Sheets, 40 bytes</h1>
+<div id="pu2" class="pu"><h1>Google Sheets, 40 bytes</h1>
 <pre><code>=join(&quot;,&quot;,sort(A:A))=join(&quot;,&quot;,sort(B:B))
 </code></pre>
 <p>Put the first list in column <code>A1:A</code>, the second list in <code>B1:B</code>, and the formula in cell <code>C1</code>.</p>
 <p><img src="https://i.sstatic.net/TKdF6qJj.png" alt="screenshot" /></p>
 </div>
-<div id="pu2" class="pu"><h1>NARS2000, 2 bytes</h1>
+<div id="pu3" class="pu"><h1>NARS2000, 2 bytes</h1>
 <pre><code>≡⍦
 </code></pre>
 <p>Multiset match: are the two arguments equivalent when treated as multisets? This checks that the elements are both the same and have the same multiplicity.</p>
