--- a/q/125383.html
+++ b/q/125383.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>085</td><td>Raku Perl 6 rakudo</td><td>240719T070029Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/274257#274257">bb94</a></td></tr>
+<tr d-ix="0"><td>073</td><td>Raku Perl 6 rakudo</td><td>240719T070029Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/274257#274257">bb94</a></td></tr>
 <tr d-ix="1"><td>193</td><td>Go</td><td>240501T202352Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/272915#272915">bigyihsu</a></td></tr>
 <tr d-ix="2"><td>022</td><td>Pip l</td><td>240515T222338Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/273116#273116">DLosc</a></td></tr>
 <tr d-ix="3"><td>111</td><td>YASEPL</td><td>240410T140639Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/272477#272477">madeforl</a></td></tr>
@@ -72,10 +72,10 @@
 <tr d-ix="43"><td>021</td><td>V</td><td>170608T182709Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/125390#125390">DJMcMayh</a></td></tr>
 <tr d-ix="44"><td>006</td><td>Charcoal</td><td>170608T182441Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/125389#125389">Okx</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 85 bytes</h1>
-<pre class="lang-perl prettyprint-override"><code>{' \\/X'.comb[2*(2*$^a==.sum)+[==] $_].print,.[1]-2*$a||&quot;&quot;.say for [X] (0..2*$a)xx 2}
+<div id="pu0" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>85</s> 73 bytes</h1>
+<pre class="lang-perl prettyprint-override"><code>{for $_ -&gt;\y {say [~] .map({' \\/X'.comb[2*!(y+$_)+(y==$_)]})}}o{-$_..$_}
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kKDG7dMGy3EoFtTTbpaUlaboWN0Or1RViYvQj1PWS83OToo20NIy0VOISbW31iktzNbWjbW1jFVTiY_UKijLzSnT0og1jdYEKEmtqlJT0ihMrFdLyixSiI2IVNAz09EASmhUVCka1EMN3W3OBpOMMDRR07RRU8hSquRQU0oAMay6oigULIDQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m72kKDG7dMGy3EoFtTTbpaUlaboWNz2r0_KLFFTiFXTtYioVqosTKxWi62IV9HITCzSq1RViYvQj1PWS83OToo20FDUqtVXiNbU1Km1tgXRsrWZtbX61rkq8np5KfC3EwN3WXCAD4wwNgCYqqOQpVHMpKKQBGdZcUBULFkBoAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, <s>199</s> 193 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>import.&quot;strings&quot;
