--- a/q/274270.html
+++ b/q/274270.html
@@ -26,47 +26,58 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>015</td><td>Wolfram Language Mathematica</td><td>240720T004150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274283#274283">138 Aspe</a></td></tr>
-<tr d-ix="1"><td>2110</td><td>Python 3.8 prerelease</td><td>240720T002041Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274281#274281">squarero</a></td></tr>
-<tr d-ix="2"><td>044</td><td>Setanta</td><td>240720T001539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274280#274280">bb94</a></td></tr>
-<tr d-ix="3"><td>011</td><td>Charcoal</td><td>240719T235752Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274279#274279">Neil</a></td></tr>
-<tr d-ix="4"><td>016</td><td>Arturo</td><td>240719T235648Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274278#274278">chunes</a></td></tr>
-<tr d-ix="5"><td>034</td><td>Google Sheets</td><td>240719T220307Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274272#274272">doubleun</a></td></tr>
-<tr d-ix="6"><td>002</td><td>Jelly</td><td>240719T223137Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274277#274277">Unrelate</a></td></tr>
-<tr d-ix="7"><td>001</td><td>Brachylog</td><td>240719T221947Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274276#274276">Unrelate</a></td></tr>
-<tr d-ix="8"><td>003</td><td>Vyxal 3</td><td>240719T221850Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274275#274275">Seggan</a></td></tr>
-<tr d-ix="9"><td>039</td><td>JavaScript Node.js</td><td>240719T221009Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274274#274274">Andrew B</a></td></tr>
-<tr d-ix="10"><td>027</td><td>JavaScript ES6</td><td>240719T220621Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274273#274273">Arnauld</a></td></tr>
-<tr d-ix="11"><td>002</td><td>NARS2000</td><td>240719T213649Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274271#274271">RubenVer</a></td></tr>
+<tr d-ix="0"><td>027</td><td>Haskell</td><td>240720T004857Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274284#274284">xnor</a></td></tr>
+<tr d-ix="1"><td>031</td><td>Python 3.8 prerelease</td><td>240720T002041Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274281#274281">squarero</a></td></tr>
+<tr d-ix="2"><td>015</td><td>Wolfram Language Mathematica</td><td>240720T004150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274283#274283">138 Aspe</a></td></tr>
+<tr d-ix="3"><td>044</td><td>Setanta</td><td>240720T001539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274280#274280">bb94</a></td></tr>
+<tr d-ix="4"><td>011</td><td>Charcoal</td><td>240719T235752Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274279#274279">Neil</a></td></tr>
+<tr d-ix="5"><td>016</td><td>Arturo</td><td>240719T235648Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274278#274278">chunes</a></td></tr>
+<tr d-ix="6"><td>034</td><td>Google Sheets</td><td>240719T220307Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274272#274272">doubleun</a></td></tr>
+<tr d-ix="7"><td>002</td><td>Jelly</td><td>240719T223137Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274277#274277">Unrelate</a></td></tr>
+<tr d-ix="8"><td>001</td><td>Brachylog</td><td>240719T221947Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274276#274276">Unrelate</a></td></tr>
+<tr d-ix="9"><td>003</td><td>Vyxal 3</td><td>240719T221850Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274275#274275">Seggan</a></td></tr>
+<tr d-ix="10"><td>039</td><td>JavaScript Node.js</td><td>240719T221009Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274274#274274">Andrew B</a></td></tr>
+<tr d-ix="11"><td>027</td><td>JavaScript ES6</td><td>240719T220621Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274273#274273">Arnauld</a></td></tr>
+<tr d-ix="12"><td>002</td><td>NARS2000</td><td>240719T213649Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274271#274271">RubenVer</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 15 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 27 bytes</h1>
+
+<pre class="lang-hs prettyprint-override"><code>g=sum.map(65^)
+a%b=g a==g b
+</code></pre>
+<p><a href="https://tio.run/##HY3BCsIwDIbve4ocFFqI4mrdLvYRfIISIYUxh@sYtt5895r2Ej7@JP/34vSe1rWU2aVvPEfe1XB76o6Pwc3ATkYoeUo5gQOv/AV7NHhFS@gNWiFJSCMo30tUUbWFxZEQBEfBocX109Sj2kGausjLJrUifcD@WbYMB/Bi/inGoO@n5qXyBw" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+<p>Converts the element counts of each list to base 65 by summing <code>65^n</code> for each element <code>n</code>, and compares the results. Base 65 works because the lists are guaranteed to have 64 elements max. We're also assuming there are no negative values.</p>
+<p>Haskell is an interesting language for this challenge because sorting is locked behind a costly import.</p>
+<p><strong>35 bytes</strong></p>
+
+<pre class="lang-hs prettyprint-override"><code>import Data.List
+a%b=sort a==sort b
+</code></pre>
+<p><a href="https://tio.run/##JY2xDgIhDIb3e4oOmkBSjYfEW2Rz1CcgDCW5ROJxRw5G3x0LTv3ytf3/N@XPvCy1hpi2vcCDCp2fIZeBjt7kpsj8p69lziWDASvsBUdUeEXt0CrUTGycRBB2ZNVQ9IXGySEwToy3rtunakctw0k3RAorx0ZKL0h7WAscwHL/VxB6eT/1Xld/" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 21 </s> 31 bytes</h1>
+<p><em>+10 bytes due to a bug regarding duplicate items, thanks to chunes.</em></p>
+
+<pre class="lang-python prettyprint-override"><code>lambda a,b:sorted(a)==sorted(b)
+</code></pre>
+<p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUSFRJ8mqOL@oJDVFI1HT1hbKTNL8X1CUmVeikaYRbaqjYKSjYK6jYKijYBqroxAN5JmCEVDAPFZT8z8A" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<h2>Explanation</h2>
+<pre class="lang-python prettyprint-override"><code>lambda a,b:                       # Anonymous lambda function
+           sorted(a)  sorted(b)   # Sort a and b
+                    ==            # Check to see if they're equal
+</code></pre>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 15 bytes</h1>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7PzgxNzXQwSE4v6hE30FZ7b@GlkJIanGJQnJicaqCoYKWJld1tYGOoY6RjrGOSa1OtZGOCZAFFKlVqNXXV0hTABIBRZl5JUCN/qUlBaUlVgohRaWpIJ1cKIYZQQwDGWCiYw42yhzIMqutVcBlkFtiTjEWk4whJhkCzTCE6cbjjv8A" rel="nofollow noreferrer">Try it online!</a></p>
 <pre><code>SameQ@@Sort/@#&amp;
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 21 (10?) bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>lambda a,b:{*a}=={*b}
-</code></pre>
-<p>If the input can be unordered sets instead of ordered lists, then we can reduce this down to 10 bytes:</p>
-<pre class="lang-python prettyprint-override"><code>set.__eq__
-</code></pre>
-<p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUSFRJ8mqWiux1ta2Wiup9n9BUWZeiUaaRrSpjoKRjoK5joKhjoJprI5CNJBnCkZAAfNYTc3/AA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try #1 online!</a><br />
-<a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzvzi1RC8@PrUwPv5/QVFmXolGmka1qY6CkY6CuY6CoY6Caa2OQjWQZwpGQAHzWk3N/wA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try #2 online!</a></p>
-<h2>Explanation</h2>
-<pre class="lang-python prettyprint-override"><code>lambda a,b:             # Anonymous lambda function
-           {*a}  {*b}   # Set unpacking; in Python,
-                        # sets are unordered
-               ==       # Check to see if they're equal
-                        # (i.e. have the same elements)
-</code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 44 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 44 bytes</h1>
 <pre><code>gniomh(a,b){toradh sortail@a()==sortail@b()}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICIqZORCw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
 <pre><code>⬤⁺θη⁼№θι№ηι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMMxJ0cjIKe0WKNQRyFDU0fBtbA0MadYwzm/FCgJFMsEikE4GSAOEFj//x8dbaBjqGOkY6xjomMQqxNtpGMAZBkDScPY2P@6ZTkA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> if the two inputs are permutations, nothing if not. Explanation:</p>
@@ -84,13 +95,13 @@
             Implicitly print
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 16 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 16 bytes</h1>
 <pre><code>$=&gt;[=sort&amp;sort&amp;]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?srVZst" rel="nofollow noreferrer">Try it!</a></p>
 <p>Sort first list, sort second list, check if they are equal. Each time <code>&amp;</code> is used, it refers to the next argument.</p>
 </div>
-<div id="pu5" class="pu"><h1>Google Sheets, 34 bytes</h1>
+<div id="pu6" class="pu"><h1>Google Sheets, 34 bytes</h1>
 <pre><code>=sort(min(n(sort(A:A)=sort(B:B))))
 </code></pre>
 <p>Put the first list in column <code>A1:A</code>, the second list in <code>B1:B</code>, and the formula in cell <code>C1</code>. Outputs <code>1</code> for true and <code>0</code> for false.</p>
@@ -100,7 +111,7 @@
 <p>Outputs <code>true</code> or <code>false</code>.</p>
 <p><img src="https://i.sstatic.net/TKdF6qJj.png" alt="screenshot" /></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 2 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 2 bytes</h1>
 <pre><code>œ^
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///o5Lj/h5frP9zZphn5/390tIGOoY6RjrGOSaxONJjWAYrEAjlAngkQmoPFzYEsM7CoIZAAygMA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -109,13 +120,13 @@
 </code></pre>
 <p><code>Ṣ€E</code> (monadic pair input) and <code>œ&amp;Ƒ</code> (dyadic) are both non-inverted for 3 bytes (as well as just <code>œ^Ṇ</code>, come to think of it).</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 1 byte</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 1 byte</h1>
 <pre><code>p
 </code></pre>
 <p><a href="https://tio.run/##SypKTM6ozMlPN/r/v@D//2gDHUMdIx1jHZPY/9FgWgcoEgsA" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
 <p>Yep, that's just one builtin. Brachylog works in terms of (generally) bidirectional relationships between variables, with two implicit variables conventionally called &quot;input&quot; (<code>?</code>) and &quot;output&quot; (<code>.</code>), but also has a fundamental concept of &quot;declarative failure&quot;: here, each of the input and output variables is used to input a list, and the builtin predicate <code>p</code> succeeds in relating them if and only if they're permutations of each other. This is more useful in other contexts, like <em>generating</em> permutations if one of the variables doesn't have a given value, or constraining results of some other computation.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 3 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 3 bytes</h1>
 <pre><code>ᵛS≈
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#WyIiLCIiLCLhtZtT4omIIiwiIiwiW1swLDEsMiwzLDRdLFsyLDQsMywwLDFdXSIsIjMuNC4yIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -126,20 +137,20 @@
   ≈ # And check if they are equal
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 39 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 39 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>(a,b,x=k=&gt;k.sort().join`|`)=&gt;x(a)==x(b)
 </code></pre>
 <p><a href="https://tio.run/##hY47DoMwEET7nMLlrrQ24aNQmTInSIeQMMREfIQRJhFF7u4YqogU6Uaj90bTqZey9dxOCx/NXbtGOlBU0Sp7mfXCmnkBFJ1px/JdosxWUCjlChW62ozWDFoM5gEN5GcKKaKYkoLyiBKffFMgsiBgnGfsNj/16eBsXELpbqQ@Xb74qxrsjxB69N/ofmPjovg45z4" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu10" class="pu"><h1>JavaScript (ES6), 27 bytes</h1>
+<div id="pu11" class="pu"><h1>JavaScript (ES6), 27 bytes</h1>
 <p>Expects <code>(a)(b)</code> and returns a Boolean value.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;b=&gt;a.sort()+&quot;&quot;==b.sort()
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@z/R1i7J1i5Rrzi/qERDU1tJydY2Ccr5n5yfV5yfk6qXk5@ukaYRrWCgY6hjpGOsY6IQqwnkGumYADlAQSBXU0FfXyGkqDSVC10TSJWJjjlMizmQYwbWAAJATW6JOcWYugwh6g3hKpEB1Kr/AA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu11" class="pu"><h1>NARS2000, 2 bytes</h1>
+<div id="pu12" class="pu"><h1>NARS2000, 2 bytes</h1>
 <pre><code>≡⍦
 </code></pre>
 <p>Multiset match: are the two arguments equivalent when treated as multisets? This checks that the elements are both the same and have the same multiplicity.</p>
