--- a/q/62713.html
+++ b/q/62713.html
@@ -59,16 +59,14 @@
 </code></pre>
 <p>Takes decimal input</p>
 <p><a href="https://www.uiua.org/pad?src=0_12_0-dev_2__ZiDihpAgwrDii6_iiIo64oqf4oqDKOKGpTEv4oanKS_ihqUuLyvii68KZiBbMV0KZiBbMl0KZiBbMSAyIDVdCmYgWzQyOTQ5NjcyOTVdCmYgWzI0NTQyNjcwMjYgMjg2MzMxMTUzMCAzNjgxNDAwNTM5XQpmIFsyMzQxMTAzOTQ1IDI5NjkxMTI1MDYgMTg0OTA3ODk0OSAxNDMwNjM5MTg5XQo=" rel="nofollow noreferrer">Try it!</a></p>
-<pre><code>
-°⋯∊:⊟⊃(↥1/↧)/↥./+⋯
-                  ⋯  # convert to binary (padding with zeroes),
-                /+   # get bitsums,
-             /↥      # find the maximum
-     ⊟⊃             # and
-        (↥1/↧)       # the non-zero minimum,
-   ∊:          .     # get bits that are one of the two,
+<pre><code>°⋯∊:⊟⊃(↥1/↧)/↥./+⋯
+                 ⋯  # convert to binary (padding with zeroes),
+               /+   # get bitsums,
+            /↥      # find the maximum
+    ⊟⊃              # and
+      (↥1/↧)        # the non-zero minimum,
+  ∊:          .     # set bits that are one of the two,
 °⋯                  # and convert back to decimal
-<span class="math-container">```</span>
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>102</s> 99 bytes</h1>
