--- a/q/274270.html
+++ b/q/274270.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>004</td><td>Japt</td><td>240720T113144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274295#274295">Shaggy</a></td></tr>
-<tr d-ix="1"><td>022</td><td>APL+WIN</td><td>240720T074947Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274294#274294">Graham</a></td></tr>
-<tr d-ix="2"><td>011</td><td>Charcoal</td><td>240719T235752Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274279#274279">Neil</a></td></tr>
-<tr d-ix="3"><td>007</td><td>Uiua</td><td>240720T013416Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274285#274285">nyxbird</a></td></tr>
+<tr d-ix="0"><td>006</td><td>Uiua</td><td>240720T013416Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274285#274285">nyxbird</a></td></tr>
+<tr d-ix="1"><td>004</td><td>Japt</td><td>240720T113144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274295#274295">Shaggy</a></td></tr>
+<tr d-ix="2"><td>022</td><td>APL+WIN</td><td>240720T074947Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274294#274294">Graham</a></td></tr>
+<tr d-ix="3"><td>011</td><td>Charcoal</td><td>240719T235752Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274279#274279">Neil</a></td></tr>
 <tr d-ix="4"><td>027</td><td>Haskell</td><td>240720T004857Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274284#274284">xnor</a></td></tr>
 <tr d-ix="5"><td>031</td><td>Python 3.8 prerelease</td><td>240720T002041Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274281#274281">squarero</a></td></tr>
 <tr d-ix="6"><td>015</td><td>Wolfram Language Mathematica</td><td>240720T004150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274283#274283">138 Aspe</a></td></tr>
@@ -43,19 +43,29 @@
 <tr d-ix="14"><td>027</td><td>JavaScript ES6</td><td>240719T220621Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274273#274273">Arnauld</a></td></tr>
 <tr d-ix="15"><td>002</td><td>NARS2000</td><td>240719T213649Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274271#274271">RubenVer</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 4 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 6 <strike>7</strike> bytes</h1>
+<p><sup>-1 thanks to ovs</sup></p>
+<pre><code>≍∩⊏∩⊸⍏
+</code></pre>
+<p><a href="https://www.uiua.org/pad?src=0_12_0-dev_2__ZiDihpAg4omN4oip4oqP4oip4oq44o2PCmYgWzAgMSAyIDMgNF0gWzIgNCAzIDAgMV0KZiBbMiA0IDQgN10gWzIgNyA0IDZdCmYgWzFdIFsxXQo=" rel="nofollow noreferrer">try it!</a></p>
+<pre><code>   ∩ ⍏ # get grade of both inputs
+ ∩⊏ ⊸  # index both inputs by grade (sort)
+≍       # are they equal?
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 4 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>Takes input as a 2D array.</p>
 <pre><code>mÍre
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=bc1yZQ&amp;input=WwpbMCwxLDIsMyw0XQpbMiw0LDMsMCwxXQpd" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu1" class="pu"><h1>APL+WIN, 22 bytes</h1>
+<div id="pu2" class="pu"><h1>APL+WIN, 22 bytes</h1>
 <p>Prompts for the two lists as vectors</p>
 <pre><code>(⍴n)=+/n[⍒n←⎕]=m[⍒m←⎕]
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tv8aj3i15mrba@nnRj3on5QElgApibXNBvFwo7z9QJdf/NC4DBUMFIwVjBRMFLiMgYawAFOBKA7NNFMxBguZAhhlQSMdQAYgB" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
 <pre><code>⬤⁺θη⁼№θι№ηι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMMxJ0cjIKe0WKNQRyFDU0fBtbA0MadYwzm/FCgJFMsEikE4GSAOEFj//x8dbaBjqGOkY6xjomMQqxNtpGMAZBkDScPY2P@6ZTkA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> if the two inputs are permutations, nothing if not. Explanation:</p>
@@ -86,15 +96,6 @@
         η   Second input
      Σ      Take the sum
             Implicitly print
-</code></pre>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 7 bytes</h1>
-<pre><code>≍∩(⊏⍏.)
-</code></pre>
-<p><a href="https://www.uiua.org/pad?src=0_12_0-dev_2__ZiDihpAg4omN4oipKOKKj-KNjy4pCmYgWzAgMSAyIDMgNF0gWzIgNCAzIDAgMV0KZiBbMiA0IDQgN10gWzIgNyA0IDZdCmYgWzFdIFsxXQo=" rel="nofollow noreferrer">try it!</a></p>
-<pre><code>  (⊏⍏.) # sort
- ∩       # both inputs
-≍        # and check if they're equal
 </code></pre>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 27 bytes</h1>
