--- a/q/274225.html
+++ b/q/274225.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>037</td><td>J</td><td>240720T055517Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274290#274290">noodle p</a></td></tr>
+<tr d-ix="0"><td>031</td><td>J</td><td>240720T055517Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274290#274290">noodle p</a></td></tr>
 <tr d-ix="1"><td>093</td><td>Python 3</td><td>240718T071207Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274237#274237">Jitse</a></td></tr>
 <tr d-ix="2"><td>099</td><td>JavaScript ES6</td><td>240718T064538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274234#274234">Arnauld</a></td></tr>
 <tr d-ix="3"><td>104</td><td>R</td><td>240718T151236Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274247#274247">Dominic </a></td></tr>
@@ -41,15 +41,14 @@
 <tr d-ix="12"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
 <tr d-ix="13"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, <s>38</s> 37 bytes</h1>
-<pre><code>0{(/:[:&gt;./[:|+/\@|:)@({~(i.@!A.i.)@#)
+<div id="pu0" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, <s>37</s> 31 bytes</h1>
+<pre><code>0{[:(/:[:&gt;./[:|+/\@|:)i.@!@#A.]
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70wa8FOJT31NAVbKwV1BR0FAwUrINbVU3AO8nFbWlqSpmtxU9WgWkPfKtrKTk8_2qpGWz_GocZK00Gjuk4jU89B0VEvU0_TQVkTqthQkys1OSNfIU0h3lQh3kTBUMFIwRguZKFgAmdbKpgoWCrEm0E0LlgAoQE" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<pre><code>permsOfOrd =. i.@! A. i.
-perms      =. {~ permsOfOrd@#
+<p><a href="https://ato.pxeger.com/run?1=m70wa8FOJT31NAVbKwV1BR0FAwUrINbVU3AO8nFbWlqSpmux36A62kpD3yrayk5PP9qqRls_xqHGSjNTz0HRQdlRLxai6qahJldqcka-QppCvKlCvImCoYKRgjFcyELBBM62VDBRsFSIN4NoXLAAQgMA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre><code>perms =. i.@!@# A. ]
 maxAbsPref =. [: &gt;./ [: | +/\
 
-f =: 0 { (/: maxAbsPref@|:)@perms
+f =: 0 { [: (/: maxAbsPref@|:) perms
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 93 bytes</h1>
