--- a/q/274270.html
+++ b/q/274270.html
@@ -49,6 +49,10 @@
 <pre><code>≡○∧
 </code></pre>
 <p><a href="https://bqnpad.mechanize.systems/s?bqn=eyJkb2MiOiJG4oaQ4omh4peL4oinXG5cbuKAolNob3cg4p%2Bo4p%2BpIEYg4p%2Bo4p%2BpXG7igKJTaG93IOKfqDIsNCw0LDcsN%2BKfqSBGIOKfqDIsNyw0LDbin6lcbuKAolNob3cg4p%2BoMCwxLDIsMyw04p%2BpIEYg4p%2BoMiw0LDMsMCwx4p%2BpXG7igKJTaG93IOKfqDIsNCw0LDfin6kgRiDin6gyLDcsNCw24p%2BpXG7in6gx4p%2BpIEYg4p%2BoMeKfqVxuIiwicHJldlNlc3Npb25zIjpbXSwiY3VycmVudFNlc3Npb24iOnsiY2VsbHMiOltdLCJjcmVhdGVkQXQiOjE3MDkzOTU1NzMwMTF9LCJjdXJyZW50Q2VsbCI6eyJmcm9tIjowLCJ0byI6MTIxLCJyZXN1bHQiOm51bGx9fQ%3D%3D" rel="nofollow noreferrer">Try it on BQNPAD!</a></p>
+<h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 12 bytes</h1>
+<pre><code>{y[&lt;y]~x@&lt;x}
+</code></pre>
+<p><a href="https://ngn.bitbucket.io/k#eJxLs6qujLapjK2rcLCpqOXiSos20DHUMdIx1jGxNtIxAdJAfixQGMQx0TEHCpoDaTOQkI6hNVAOAFcZEFY=" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 6 <strike>7</strike> bytes</h1>
 <p><sup>-1 thanks to ovs</sup></p>
