--- a/q/274225.html
+++ b/q/274225.html
@@ -46,7 +46,10 @@
 <p>Another brute-force solution, but in a language without a permutation builtin.</p>
 <pre><code>gniomh(l){s:=eas@mata(999)p:=0k:=fad@l gniomh f(v,w,n,m){ma fad@v&lt;k{le i idir(0,k){ma aimsigh@v(i)&lt;0{N:=n+l[i]f(cuir_le@(coip@v())(i),cuir_le@(coip@w())(N-n),N,uas(dearbh@mata(N),m))}}}no ma m&lt;s{p=w s=m}}f([],[],0,0)toradh p}
 </code></pre>
-<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDIiOKFCw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
+<p>Alternate solution using the undocumented <code>thar</code> builtin:</p>
+<pre><code>gniomh(l){s:=eas@mata(999)p:=0k:=fad@l gniomh f(v,n,m){ma fad@v&lt;k{le i idir(0,k){ma aimsigh@v(i)&lt;0{N:=n+l[i]f(cuir_le@(coip@v())(i),N,uas(dearbh@mata(N),m))}}}no ma m&lt;s{p=v s=m}}f([],0,0)toradh thar(gniomh(i){toradh l[i]},p)}
+</code></pre>
+<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDwhfuICw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, <s>37</s> 31 bytes</h1>
 <pre><code>0{[:(/:[:&gt;./[:|+/\@|:)i.@!@#A.]
