--- a/q/274270.html
+++ b/q/274270.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>016</td><td>Julia 1.0</td><td>240720T162315Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274298#274298">Ashlin H</a></td></tr>
-<tr d-ix="1"><td>003</td><td>BQN</td><td>240720T155042Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274297#274297">akamayu</a></td></tr>
-<tr d-ix="2"><td>006</td><td>Uiua</td><td>240720T013416Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274285#274285">nyxbird</a></td></tr>
-<tr d-ix="3"><td>004</td><td>Japt</td><td>240720T113144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274295#274295">Shaggy</a></td></tr>
-<tr d-ix="4"><td>022</td><td>APL+WIN</td><td>240720T074947Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274294#274294">Graham</a></td></tr>
-<tr d-ix="5"><td>011</td><td>Charcoal</td><td>240719T235752Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274279#274279">Neil</a></td></tr>
-<tr d-ix="6"><td>027</td><td>Haskell</td><td>240720T004857Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274284#274284">xnor</a></td></tr>
+<tr d-ix="0"><td>026</td><td>Haskell</td><td>240720T004857Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274284#274284">xnor</a></td></tr>
+<tr d-ix="1"><td>016</td><td>Julia 1.0</td><td>240720T162315Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274298#274298">Ashlin H</a></td></tr>
+<tr d-ix="2"><td>003</td><td>BQN</td><td>240720T155042Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274297#274297">akamayu</a></td></tr>
+<tr d-ix="3"><td>006</td><td>Uiua</td><td>240720T013416Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274285#274285">nyxbird</a></td></tr>
+<tr d-ix="4"><td>004</td><td>Japt</td><td>240720T113144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274295#274295">Shaggy</a></td></tr>
+<tr d-ix="5"><td>022</td><td>APL+WIN</td><td>240720T074947Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274294#274294">Graham</a></td></tr>
+<tr d-ix="6"><td>011</td><td>Charcoal</td><td>240719T235752Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274279#274279">Neil</a></td></tr>
 <tr d-ix="7"><td>031</td><td>Python 3.8 prerelease</td><td>240720T002041Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274281#274281">squarero</a></td></tr>
 <tr d-ix="8"><td>015</td><td>Wolfram Language Mathematica</td><td>240720T004150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274283#274283">138 Aspe</a></td></tr>
 <tr d-ix="9"><td>044</td><td>Setanta</td><td>240720T001539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274280#274280">bb94</a></td></tr>
@@ -45,7 +45,28 @@
 <tr d-ix="16"><td>027</td><td>JavaScript ES6</td><td>240719T220621Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274273#274273">Arnauld</a></td></tr>
 <tr d-ix="17"><td>002</td><td>NARS2000</td><td>240719T213649Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274271#274271">RubenVer</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://julialang.org/" rel="nofollow noreferrer">Julia 1.0</a>, 16 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 26 bytes</h1>
+
+<pre class="lang-hs prettyprint-override"><code>(.g).(==).g
+g=sum.map(65^)
+</code></pre>
+<p><a href="https://tio.run/##HY1BDoIwEEX3nKILSWaSoRFE2NgjeIJak0KwEgtpLO48u3XK7uXNn/@fNr4m7xOUqG4JpEMJSqF0hVPxs8jFBujOd0zbFLcolNCgj1RTQydqDemGWiY2BkmArlllhP3QUm9IMPaM3a7zZ5NDucOgKRY7r1zLO1cR3vO6iYPQthy@YGnAS7XvmvQbH966mKoxhD8" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+<p><strong>27 bytes</strong></p>
+
+<pre class="lang-hs prettyprint-override"><code>g=sum.map(65^)
+a%b=g a==g b
+</code></pre>
+<p><a href="https://tio.run/##HY3BCsIwDIbve4ocFFqI4mrdLvYRfIISIYUxh@sYtt5895r2Ej7@JP/34vSe1rWU2aVvPEfe1XB76o6Pwc3ATkYoeUo5gQOv/AV7NHhFS@gNWiFJSCMo30tUUbWFxZEQBEfBocX109Sj2kGausjLJrUifcD@WbYMB/Bi/inGoO@n5qXyBw" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+<p>Converts the element counts of each list to base 65 by summing <code>65^n</code> for each element <code>n</code>, and compares the results. Base 65 works because the lists are guaranteed to have 64 elements max. We're also assuming there are no negative values.</p>
+<p>Haskell is an interesting language for this challenge because sorting is locked behind a costly import.</p>
+<p><strong>35 bytes</strong></p>
+
+<pre class="lang-hs prettyprint-override"><code>import Data.List
+a%b=sort a==sort b
+</code></pre>
+<p><a href="https://tio.run/##JY2xDgIhDIb3e4oOmkBSjYfEW2Rz1CcgDCW5ROJxRw5G3x0LTv3ytf3/N@XPvCy1hpi2vcCDCp2fIZeBjt7kpsj8p69lziWDASvsBUdUeEXt0CrUTGycRBB2ZNVQ9IXGySEwToy3rtunakctw0k3RAorx0ZKL0h7WAscwHL/VxB6eT/1Xld/" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://julialang.org/" rel="nofollow noreferrer">Julia 1.0</a>, 16 bytes</h1>
 
 <pre class="lang-julia prettyprint-override"><code>A*B=A∪B==A∩B
 </code></pre>
@@ -58,7 +79,7 @@ A*B=~A==~B
 <p><a href="https://tio.run/##yyrNyUw0rPj/v862OL@ohMtRy8m2ztHWts7pv0NxRn65QrSBjqGOkY6xjkmsgpZCtJGOCZANFIvlgsqDREx0zKGy5kC2GVzOECxqiM4H6v4PAA" rel="nofollow noreferrer" title="Julia 1.0 – Try It Online">Try it online!</a></p>
 <p>Julia's built-in <code>issetequal</code> would also work if both lists are guaranteed to have equal length.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://mlochbaum.github.io/BQN/index.html" rel="nofollow noreferrer">BQN</a>, 3bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://mlochbaum.github.io/BQN/index.html" rel="nofollow noreferrer">BQN</a>, 3bytes</h1>
 <p>Match over sort.</p>
 <pre><code>≡○∧
 </code></pre>
@@ -68,7 +89,7 @@ A*B=~A==~B
 </code></pre>
 <p><a href="https://ngn.bitbucket.io/k#eJxLs6qujLapjK2rcLCpqOXiSos20DHUMdIx1jGxNtIxAdJAfixQGMQx0TEHCpoDaTOQkI6hNVAOAFcZEFY=" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 6 <strike>7</strike> bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 6 <strike>7</strike> bytes</h1>
 <p><sup>-1 thanks to ovs</sup></p>
 <pre><code>≍∩⊏∩⊸⍏
 </code></pre>
@@ -78,19 +99,19 @@ A*B=~A==~B
 ≍       # are they equal?
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 4 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 4 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>Takes input as a 2D array.</p>
 <pre><code>mÍre
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=bc1yZQ&amp;input=WwpbMCwxLDIsMyw0XQpbMiw0LDMsMCwxXQpd" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu4" class="pu"><h1>APL+WIN, 22 bytes</h1>
+<div id="pu5" class="pu"><h1>APL+WIN, 22 bytes</h1>
 <p>Prompts for the two lists as vectors</p>
 <pre><code>(⍴n)=+/n[⍒n←⎕]=m[⍒m←⎕]
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tv8aj3i15mrba@nnRj3on5QElgApibXNBvFwo7z9QJdf/NC4DBUMFIwVjBRMFLiMgYawAFOBKA7NNFMxBguZAhhlQSMdQAYgB" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
 <pre><code>⬤⁺θη⁼№θι№ηι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMMxJ0cjIKe0WKNQRyFDU0fBtbA0MadYwzm/FCgJFMsEikE4GSAOEFj//x8dbaBjqGOkY6xjomMQqxNtpGMAZBkDScPY2P@6ZTkA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> if the two inputs are permutations, nothing if not. Explanation:</p>
@@ -122,21 +143,6 @@ A*B=~A==~B
      Σ      Take the sum
             Implicitly print
 </code></pre>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 27 bytes</h1>
-
-<pre class="lang-hs prettyprint-override"><code>g=sum.map(65^)
-a%b=g a==g b
-</code></pre>
-<p><a href="https://tio.run/##HY3BCsIwDIbve4ocFFqI4mrdLvYRfIISIYUxh@sYtt5895r2Ej7@JP/34vSe1rWU2aVvPEfe1XB76o6Pwc3ATkYoeUo5gQOv/AV7NHhFS@gNWiFJSCMo30tUUbWFxZEQBEfBocX109Sj2kGausjLJrUifcD@WbYMB/Bi/inGoO@n5qXyBw" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
-<p>Converts the element counts of each list to base 65 by summing <code>65^n</code> for each element <code>n</code>, and compares the results. Base 65 works because the lists are guaranteed to have 64 elements max. We're also assuming there are no negative values.</p>
-<p>Haskell is an interesting language for this challenge because sorting is locked behind a costly import.</p>
-<p><strong>35 bytes</strong></p>
-
-<pre class="lang-hs prettyprint-override"><code>import Data.List
-a%b=sort a==sort b
-</code></pre>
-<p><a href="https://tio.run/##JY2xDgIhDIb3e4oOmkBSjYfEW2Rz1CcgDCW5ROJxRw5G3x0LTv3ytf3/N@XPvCy1hpi2vcCDCp2fIZeBjt7kpsj8p69lziWDASvsBUdUeEXt0CrUTGycRBB2ZNVQ9IXGySEwToy3rtunakctw0k3RAorx0ZKL0h7WAscwHL/VxB6eT/1Xld/" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 21 </s> 31 bytes</h1>
 <p><em>+10 bytes due to a bug regarding duplicate items, thanks to chunes.</em></p>
