--- a/q/90349.html
+++ b/q/90349.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>064</td><td>Setanta 0.3.3</td><td>240720T231047Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/274303#274303">bb94</a></td></tr>
+<tr d-ix="0"><td>060</td><td>Setanta 0.3.3</td><td>240720T231047Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/274303#274303">bb94</a></td></tr>
 <tr d-ix="1"><td>023</td><td>JavaScript Node.js</td><td>240718T044350Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/274231#274231">Andrew B</a></td></tr>
 <tr d-ix="2"><td>037</td><td>R</td><td>240607T211733Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/273516#273516">int 21h </a></td></tr>
 <tr d-ix="3"><td>012</td><td>YASEPL</td><td>240208T203927Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/269917#269917">madeforl</a></td></tr>
@@ -248,10 +248,10 @@
 <tr d-ix="219"><td>002</td><td>Pyth</td><td>160819T215825Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/90355#90355">Dennis</a></td></tr>
 <tr d-ix="220"><td>003</td><td>CJam</td><td>160819T215242Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/90350#90350">Dennis</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a> 0.3.3, 64 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a> 0.3.3, <s>64</s> 60 bytes</h1>
 <p>Unfortunately, this challenge is impossible in the current version of Setanta. There is no equivalent to <code>ord</code>, so you have to get the <code>a</code> from the string representation of some object. However, this requires either <code>go_téacs</code> (equivalent of <code>toString</code>) or <code>nasc</code> (equivalent of <code>join</code>), both of which contain an <code>a</code> – <code>&quot;&quot; + obj</code> doesn’t work. However, before Setanta 0.4.0, <a href="https://github.com/EoinDavey/Setanta/blob/master/CHANGELOG.md#breaking-changes" rel="nofollow noreferrer"><code>go_téacs</code> was called <code>go_lit</code></a>, making it possible to complete the challenge.</p>
-<p>The solution gets the <code>a</code> from <code>neamhní</code> (equivalent to <code>undefined</code>). <code>roinn</code> (<code>split</code>) is needed because <code>cuid</code> (<code>substr</code>) contains a <code>u</code>.</p>
-<pre><code>gniomh b(){}scriobh(roinn(roinn(go_lit(b()),'e')[3-2],'m')[2-2])
+<p>The solution gets the <code>a</code> from <code>NaN</code> (computed as <code>Infinity - Infinity</code>). It is also possible to get it from <code>neamhní</code> (<code>undefined</code>), but this requires two <code>roinn</code> (<code>split</code>) calls. <code>cuid</code> (<code>substr</code>) cannot be used because it contains a <code>u</code>.</p>
+<pre><code>b:=8le i idir(-8,8)b*=b scriobh(roinn(go_lit(b-b),'N')[3-2])
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 23 bytes</h1>
