--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240720T232028Z
+"   /golfscore                                      20240720T233251Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/210107.html">Stroke Count of a Chinese Numeral               : 0210107</a>
 <a href="q/90349.html">The Letter A without A                          : 0090349</a>
 <a href="q/274270.html">Check if two lists are permutations of each othe: 0274270</a>
 <a href="q/273940.html">Plot the ground path of a satellite             : 0273940</a>
