--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240721T015058Z
+"   /golfscore                                      20240721T025705Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/233282.html">Generalized FizzBuzz                            : 0233282</a>
 <a href="q/272452.html">FizzFizzFizzBuzz!                               : 0272452</a>
 <a href="q/273940.html">Plot the ground path of a satellite             : 0273940</a>
 <a href="q/90349.html">The Letter A without A                          : 0090349</a>
